[package]
name = "clean-dns-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
cargo-bpf = { path = "../redbpf/cargo-bpf", default-features = false, features = ["build", "llvm-sys"] }

[dependencies]
clean-dns-bpf = { path = "../clean-dns-bpf" }
redbpf = { path = "../redbpf/redbpf", features = ["load"] }
tokio = { version = "^1.0.1", features = ["rt", "macros", "signal", "time"] }
futures = "0.3"
getopts = "0.2"
libc = "0.2"
